Bug 459160 - "Show Code Map Ruler" label on "Local Editor Settings" popup truncated
-Created new HTML templates for the "Local Editor Settings" popup
-Changed the CSS do display "Local Editor Settings" popup settings as a table
-Changed the CSS for the "text" input type to visually align it with a "select" input type

--- a/bundles/org.eclipse.orion.client.ui/web/css/controls.css
+++ b/bundles/org.eclipse.orion.client.ui/web/css/controls.css
@@ -809,7 +809,7 @@ textarea.parameterInput {
 }
 
 .setting-control {
-	display: inline-block;
+	display: table-cell;
 	width: 130px;
 	padding: 4px;
 	margin: 5px;
@@ -818,12 +818,26 @@ textarea.parameterInput {
 	border-radius: 3px;
 	font-size: 12px;
 	color: #222;
+	vertical-align: middle;
+}
+
+.setting-control[type="text"] {
+	width: 120px;
+}
+
+.local {
+	display: table;
+}
+
+.local > div {
+	display: table-row;
 }
 
 .local .setting-label {
-	width: 150px;
+	padding-left: 8px;
 	text-align: right;
-	display: inline-block;
+	display: table-cell;
+	vertical-align: middle;
 }
 
 .delegatedUI {
